feat: Define FileValidator
- FileValidator has multiple FileFilter conditions
- Client has duplicated code if only had FileFilter list.
- Separate policy from the client code consists of multiple conditions.